--- a/estilos.css
+++ b/estilos.css
@@ -712,6 +712,15 @@ body {
     background: var(--secondary-color);
 }
 
+
+/* seccion de test de 360  con panorama*/ 
+
+#panorama {
+    width: 100%;
+    height: 400px;
+    margin-top: 4rem;
+}
+
 /* Footer */
 .footer {
     background: var(--bg-dark);
