--- a/estilos.css
+++ b/estilos.css
@@ -712,7 +712,34 @@ body {
     background: var(--secondary-color);
 }
 
-
+/* Posibles estilos de arriba */
+.menu-productos {
+    position: relative;
+    background: white;
+    border: 1px solid var(--border-color);
+    border-radius: 0;
+    padding: 1rem 0;
+    display: flex;
+    gap: 0.5rem;
+    justify-content: center;
+    text-align: center;
+}
+.menu-productos button {
+    background: rgb(240, 240, 240);
+    border: 1px solid ;
+    padding: 0.5rem 1.5rem;
+    text-align: left;
+    max-width: 200px;
+    color: var(--text-dark);
+    font-size: 0.875rem;
+    transition: var(--transition);
+}
+.menu-productos button:hover {
+    background: var(--text-dark);
+    color: white;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+}
 /* seccion de test de 360  con panorama*/ 
 
 #panorama {
@@ -756,7 +783,8 @@ body {
   color: white;
   padding: 15px;
   border-radius: 12px;
-  width: 240px;
+  height: auto;
+  width: 200px;
   box-shadow: 0 0 20px rgba(0,0,0,0.6);
 }
 
